syntax = "proto3";

package supplier;

service supplier_product {
    rpc findPreferredSupplier (ProductName) returns (PrefSupp);
    rpc findAllPreferredSupplier (SearchRequest) returns (SupplierList);
    rpc setPreferredSupplierForProduct (PrefSuppForProduct) returns (isSet);
}

message SearchRequest {
    string search = 1;
}

message PrefSupp {
    string supplier_name = 1;
}

message PrefSuppForProduct {
    string product_name = 1;
    string supplier_name = 2;
}

message ProductName {
    string name_product = 1;
}

message isSet {
    bool isSet = 1;
}

message SupplierList {
    string name_suppliers = 1;
}